Ajustado configuração do banco H2 para gravação em arquivo.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:file:C\:/data/sample
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:~/acesso
+spring.datasource.username=root
+spring.datasource.password=gx2@7242
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-# No JDBC URL: jdbc:h2:file:~/test
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+
+#Acesso ao painel administrativo do banco de dados
+#URL para o painel http://localhost:8080(ou a porta definida pelo desenvolvedor)/h2-console
+spring.h2.console.path=/h2-console
